--- a/views/Tab_Hooks.phtml
+++ b/views/Tab_Hooks.phtml
@@ -1,6 +1,6 @@
 <label>Hook/Filter Name</label>
 <input type=text id=action_search>
-<button id=search_hooks>Search</button>
+<button id=search_hooks>Search</button> <small>Try "wp_ajax" to show all wordpress AJAX handlers</small>
 <div id=hook_area></div>
 <script>
 	jQuery('#search_hooks').click(function(){  
