--- a/views/Tab_Tools.phtml
+++ b/views/Tab_Tools.phtml
@@ -9,6 +9,11 @@
 		<a target=_blank href=#>Alexa</a><br/>
 		<a target=_blank href=#>Google</a><br/>					
 		<form class=postbox>
+			
+			This can't just work like this.
+			It might be serialized data in certain areas like meta
+			
+			
 			<h2>Content Replace</h2>
 			<input type=hidden name=action value=sysinfo_replace_content>
 			<label>Replace<label><input type=text name=replace><br/>
