--- a/views/Tab_Hooks2.phtml
+++ b/views/Tab_Hooks2.phtml
@@ -1,29 +1,27 @@
 <table class='wp-list-table widefat fixed'>
-				<thead>
-					<tr>
-						<th width="45%">Action</th>
-						<th width="10%">Priority</th>
-						<th width="45%">Tasks</th>
-					</tr>
-				</thead>
-				<tbody id=hooks>
-			<?php foreach($hook as $tag => $p) : if(stripos($tag,$_POST['search'])===false) continue; ?>
-				<?php $count = count($p); ?>
-				<?php foreach($p as $name => $props): ?>
+	<thead>
+		<tr>
+			<th width="45%">Action</th>
+			<th width="10%">Priority</th>
+			<th width="45%">Tasks</th>
+		</tr>
+	</thead>
+	<tbody id=hooks>
+		<?php foreach($hook as $tag => $p) : if(stripos($tag,$_POST['search'])===false) continue; ?>
+		<?php $count = count($p); ?>
+			<?php foreach($p as $name => $props): ?>
 				<tr>
 					<th><a target=_blank href="http://adambrown.info/p/wp_hooks/hook/<?php echo $tag?>"><?php echo $tag?></td>	
 					<td><?php echo $name?></td>
 					<td><?php foreach($props as $val) :?>
 						<div class=actions>
-							<h2><?php echo $val['function']?></h2>
+							<h2><?php var_dump( $val['function']) ?></h2>
 							<pre><?php echo htmlspecialchars(print_r($val,true)); ?></pre>
 						</div>
 						<?php endforeach; ?>
 					</td>
 				</tr>
-				<?php endforeach; ?>
-				</<tbody></tbody>
-				>
 			<?php endforeach; ?>
-			<script>jQuery('.actions').accordion({collapsible: true,allwayOpen: false,active: false });</script>
-			</table>
+		<?php endforeach; ?>			
+	</tbody>
+</table>
